@@ -29,20 +29,29 @@ class FroodDispatchException extends Exception {
 	/** @var FroodParameters The parameters that Frood attempted to pass to the action. */
 	protected $_parameters;
 
+	/** @var boolean Was The Frood was in admin mode? */
+	private $_isAdmin;
+
 	/**
 	 * Constructs the Exception.
 	 *
 	 * @param string          $controller The controller that Frood attempted to dispatch to.
 	 * @param string          $action     The action that Frood attempted to call on the controller.
 	 * @param FroodParameters $parameters The parameters that Frood attempted to pass to the action.
+	 * @param boolean         $isAdmin    Was The Frood was in admin mode?
 	 * @param string          $message    The Exception message to throw.
 	 * @param int             $code       The Exception code.
 	 *
 	 * @return void
 	 */
-	public function __construct($controller = '', $action = '', FroodParameters $parameters = null, $message = '', $code = 0) {
+	public function __construct($controller = '', $action = '', FroodParameters $parameters = null, $isAdmin = false, $message = '', $code = 0) {
 		if ($message == '') {
 			$message = "Frood could not call $controller::$action($parameters)";
+			if ($isAdmin) {
+				$message .= ' [ADMIN mode]';
+			} else {
+				$message .= ' [PUBLIC mode]';
+			}
 		}
 
 		parent::__construct($message, $code);
@@ -50,6 +59,7 @@ class FroodDispatchException extends Exception {
 		$this->_controller = $controller;
 		$this->_action     = $action;
 		$this->_parameters = $parameters;
+		$this->_isAdmin    = $isAdmin;
 	}
 
 	/**
@@ -77,5 +87,12 @@ class FroodDispatchException extends Exception {
 	 */
 	public function getParameters() {
 		return $this->_parameters;
+	}
+
+	/**
+	 * Was The Frood was in admin mode?
+	 */
+	public function isAdmin() {
+		return $this->_isAdmin;
 	}
 }
